tests/NormalTests/paczka2/big_fuzzy/84817154.err
Error in line 1: A835 S868 87,6
Error in line 2: 9FnxtopI A540 3,3
Error in line 6: 9FnxtopI A836 8,7
Error in line 4: U1KsbqnJU A836 20,4
Error in line 14: U1KsbqnJU A540 24,8
Error in line 20: kFT1iUyh A835 29,9
Error in line 15: T1RcRql7Uhx S168 70,2
Error in line 30: kFT1iUyh A540 25,1
Error in line 27: T1RcRql7Uhx A836 18,1
Error in line 35: T1RcRql7Uhx S168 79,8
Error in line 34: A835 S168 144,0
Error in line 22: 9FnxtopI S168 29,0
Error in line 25: MhVGPW7Pbx S168 445,2
Error in line 45: MhVGPW7Pbx A835 79,6
Error in line 54: kFT1iUyh S168 30,3
Error in line 50: cSk3iSy6R A540 457,3
Error in line 78: 9FnxtopI A835 10,3
Error in line 80: cSk3iSy6R A836 55,9
Error in line 82: A835 A836 36,s
Error in line 84: T1RcRql7Uhx A540 30,4
Error in line 100: cSk3iSy6R A540 663
Error in line 101: kFT1iUyh A836 46,2
Error in line 92: U1KsbqnJU S168 91,8
Error in line 81: cSk3iSy6R A540 45,7
Error in line 118: T1RcRql7Uhx A835 31,4
Error in line 113: 9FnxtopI S168 196,0
Error in line 117: cSk3iSy6R A836 81,9
Error in line 114: U1KsbqnJU A836 293,1
Error in line 131: T1RcRql7Uhx A835 33,5
Error in line 139: 9FnxtopI A835 61,2
Error in line 136: T1RcRql7Uhx A540 139,9
Error in line 154: A835 A835 47,3
Error in line 142: U1KsbqnJU A540 134,4
Error in line 165: U1KsbqnJU A836 75,8
Error in line 175: kFT1iUyh A835 3,6
Error in line 185: A835 A835 38,1
Error in line 178: U1KsbqnJU A836 44,3
Error in line 186: A835 A540 14,9
Error in line 200: A835 A835 84,7
Error in line 207: kFT1iUyh S168 18,9
Error in line 219: T1RcRql7Uhx A836 91,2
Error in line 221: A835 A835 34,0
Error in line 242: kFT1iUyh S168 15,0
Error in line 244: kFT1iUyh A835 68,8
